// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render a skeleton element if skeletonOptions are passed to the component 1`] = `
<class_1
  skeletonOptions={
    Object {
      "shape": "line",
      "showSkeleton": true,
    }
  }
>
  <Skeleton
    className=""
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": true,
      }
    }
  >
    <span
      className="Skeleton skeleton line skeleton-large"
      style={
        Object {
          "width": undefined,
        }
      }
    >
      ‌
    </span>
  </Skeleton>
</class_1>
`;

exports[`<Text /> should render an element with heavy text 1`] = `
.c0 {
  font-weight: 600;
}

<class_1
  isHeavy={true}
>
  <Skeleton
    className=""
    isHeavy={true}
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
  >
    <TextComponent
      isHeavy={true}
      isInline={true}
    >
      <styled.span
        isHeavy={true}
        isInline={true}
      >
        <span
          className="c0"
        >
          Hello, world!
        </span>
      </styled.span>
    </TextComponent>
  </Skeleton>
</class_1>
`;

exports[`<Text /> should render an element with large text 1`] = `
.c0 {
  font-size: 1.125rem;
}

<class_1
  isLarge={true}
>
  <Skeleton
    className=""
    isLarge={true}
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
  >
    <TextComponent
      isInline={true}
      isLarge={true}
    >
      <styled.span
        isInline={true}
        isLarge={true}
      >
        <span
          className="c0"
        >
          Hello, world!
        </span>
      </styled.span>
    </TextComponent>
  </Skeleton>
</class_1>
`;

exports[`<Text /> should render an element with subtle text 1`] = `
.c0 {
  color: hsl(210,13.4%,47.2%);
}

<class_1
  isSubtle={true}
>
  <Skeleton
    className=""
    isSubtle={true}
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
  >
    <TextComponent
      isInline={true}
      isSubtle={true}
    >
      <styled.span
        isInline={true}
        isSubtle={true}
      >
        <span
          className="c0"
        >
          Hello, world!
        </span>
      </styled.span>
    </TextComponent>
  </Skeleton>
</class_1>
`;

exports[`<Text /> should render an element with text 1`] = `
<class_1>
  <Skeleton
    className=""
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
  >
    <TextComponent
      isInline={true}
    >
      <styled.span
        isInline={true}
      >
        <span
          className=""
        >
          Hello, world!
        </span>
      </styled.span>
    </TextComponent>
  </Skeleton>
</class_1>
`;
